--- a/BR-MS/Export.html
+++ b/BR-MS/Export.html
@@ -20,8 +20,8 @@
         <!--出库业务-->
         <el-form :model="outGoing">
             <el-form :inline="true">
-                <el-form-item label="操作员：" size="mini"><el-input v-model="outGoing.caozuoyuan" :disabled="true"></el-input></el-form-item>
-                <el-form-item label="仓库：" size="mini"><el-input v-model="outGoing.cangku" :disabled="true"></el-input></el-form-item>
+                <el-form-item label="操作员：" size="mini"><el-input v-model="outGoing.realName" :disabled="true"></el-input></el-form-item>
+                <el-form-item label="仓库：" size="mini"><el-input v-model="outGoing.warehouseName" :disabled="true"></el-input></el-form-item>
             </el-form>
             <el-form :inline="true">
                 <el-form-item label="建单人：" size="mini"><el-input v-model="outGoing.jiandanren"></el-input></el-form-item>
@@ -46,17 +46,17 @@
             <hr style="height:1px; border:none; border-top:1px dashed #c0c4cc">
             <el-table :data="outResult" size="mini" max-height="250">
                 <el-table-column type="index" width="44" label="序号"></el-table-column>
-                <el-table-column prop="huopinbianhao" label="货品编号"></el-table-column>
-                <el-table-column prop="huopinmingcheng" label="货品名称"></el-table-column>
+                <el-table-column prop="localId" label="货品编号"></el-table-column>
+                <el-table-column prop="goodsName" label="货品名称"></el-table-column>
                 <el-table-column prop="danwei" label="单位"></el-table-column>
                 <!--可编辑项 begin-->
-                <el-table-column prop="chukushiliang" label="出库数量" width="75"><template slot-scope="scope"><el-input size="mini"></el-input></template></el-table-column>
-                <el-table-column prop="chukushijian" label="出库时间" width="80"><template slot-scope="scope"><el-input size="mini"></el-input></template></el-table-column>
+                <el-table-column prop="amount" label="出库数量" width="75"><template slot-scope="scope"><el-input size="mini"></el-input></template></el-table-column>
+                <el-table-column prop="registerTime" label="出库时间" width="80"><template slot-scope="scope"><el-input size="mini"></el-input></template></el-table-column>
                 <el-table-column prop="quxiang" label="去向"><template slot-scope="scope"><el-input size="mini"></el-input></template></el-table-column>
                 <!--可编辑项 end-->
-                <el-table-column prop="zerenren" label="责任人"></el-table-column>
-                <el-table-column prop="lianxidianhua" label="联系电话"></el-table-column>
-                <el-table-column prop="beizhu" label="备注"></el-table-column>
+                <el-table-column prop="charity" label="责任人"></el-table-column>
+                <el-table-column prop="phone" label="联系电话"></el-table-column>
+                <el-table-column prop="remark" label="备注"></el-table-column>
                 <el-table-column prop="shanchu" label="">
                     <!--点击删除当前已选中货品-->
                     <template slot-scope="scope">
@@ -78,28 +78,28 @@
                 <el-form :inline="true">
                     <!-- TODO: 放入组件 -->
                     <el-form-item label="货品类别">
-                        <el-ext-foldable :options="[1,2,3,4]"></el-ext-foldable>
+                        <el-form-item label="物资类型">
+                            <el-ext-foldable :options="resTypeList" v-model="selectedTypes"></el-ext-foldable>
+                        </el-form-item>
                     </el-form-item>
                 </el-form>
                 <el-form :inline="true">
-                    <el-form-item label="货品名称：" size="mini"><el-input v-model="queryCondition.huopinmingcheng"></el-input></el-form-item>
+                    <el-form-item label="货品名称：" size="mini"><el-input v-model="queryCondition.goodsName"></el-input></el-form-item>
                     <el-form-item label="供应商：" size="mini">
-                        <el-select v-model="queryCondition.gongyingshang">
-                            <el-option label="一" value="TB"></el-option>
-                            <el-option label="二" value="JD"></el-option></el-select>
+                       <el-input v-model="queryCondition.supplier"></el-input>
                     </el-form-item>
                 </el-form>
                 <el-form :inline="true">
                     <el-form-item label="货品编号：" size="mini"><el-input v-model="queryCondition.number"></el-input></el-form-item>
                 </el-form>
-                <el-form><el-form-item size="mini"><el-button style="background-color: #ececec">查找</el-button></el-form-item></el-form>
+                <el-form><el-form-item size="mini"><el-button style="background-color: #ececec" @click="search">查找</el-button></el-form-item></el-form>
                 <hr style="height:1px; border:none; border-top:1px dashed #c0c4cc">
                 <el-table :data="queryResult" size="mini" max-height="250">
                     <el-table-column type="index" width="50" label="序号"></el-table-column>
-                    <el-table-column prop="huopinbianhao" label="货品编号"></el-table-column>
-                    <el-table-column prop="huopinmingcheng" label="货品名称"></el-table-column>
-                    <el-table-column prop="rukushijian" label="入库时间"></el-table-column>
-                    <el-table-column prop="gongyingshang" label="供应商"></el-table-column>
+                    <el-table-column prop="localId" label="货品编号"></el-table-column>
+                    <el-table-column prop="goodsName" label="货品名称"></el-table-column>
+                    <el-table-column prop="registerTime" label="入库时间"></el-table-column>
+                    <el-table-column prop="supplier" label="供应商"></el-table-column>
                     <el-table-column prop="xiangxixinxi" label="详细信息" width="80">
                         <!--点击查看当前物资详细信息-->
                         <template slot-scope="scope">
@@ -112,8 +112,8 @@
                             </el-dialog>
                         </template>
                     </el-table-column>
-                    <el-table-column prop="zerenren" label="责任人"></el-table-column>
-                    <el-table-column prop="lianxidianhua" label="联系电话"></el-table-column>
+                    <el-table-column prop="charity" label="责任人"></el-table-column>
+                    <el-table-column prop="phone" label="联系电话"></el-table-column>
                     <el-table-column prop="chuku" label="">
                         <!--点击出库 复制转移所有当前货品编号至 outResult-->
                         <template slot-scope="scope">
@@ -131,30 +131,48 @@
 <script src="res/dependencies.js"></script>
 <script>
     const ElExtFoldable = require('/comps/el-ext-foldable');
+    var post=require('/mods/backend');
+
+    function getData(app){
+        post('/depot/initialize',{},(data,err)=>{
+            if(err){
+                return;
+            }
+            app.outGoing.realName=data.realName;
+            app.outGoing.warehouseName=data.warehouseName;
+        })
+    }
 
     var app = new Vue({
         el: '#app',
         data: function(){
             return{
+                selectedTypes:[],
+                resTypeList: [
+                    '电脑整机', '大型家电', '网络产品', '厨房电器',
+                    '电脑配件', '五金装饰', '摄影摄像', '健康卫生',
+                    '数码配件', '通信器材', '办公设备', '家具',
+                    '文具耗材', '生活电器', '生活用品', '汽车用品',
+                    '文体器材', '学习书籍', '粮油食品', '工程建材',
+                    '医疗卫生', '油品', '军队服装', '交通工具', '其他'
+                ],
                 queryCondition:{/* 查找部分 —— 查找条件 */
-                    huopinmingcheng:'',
-                    gongyingshang:'',
-                    huopinbianhao:'',
-                    huopinleibie:''
+                    goodsName:'',
+                    supplier:'',
+                    localId:'',
+                    type:''
                 },
                 queryResult:[{/* 查找部分 —— 查找结果表格 */
-                    huopinbianhao: '1',
-                    huopinmingcheng: '',
-                    rukkushijian: '',
-                    gongyingshang: '',
-                    xiangxixinxi: '',
-                    zerenren: '',
-                    lianxidianhua: '',
-                    chuku:''
+                    localId: '',
+                    goodsName: '',
+                    registerTime: '',
+                    supplier: '',
+                    charity: '',
+                    phone: ''
                 }],
                 outGoing:{/* 出库业务 —— 相关信息填写 */
-                    cangku:'',
-                    caozuoyuan:'',
+                    warehouseName:'',
+                    realName:'',
                     chukudanhao:'',
                     chukudanshangchuan:'',
                     jiaodanren:'',
@@ -162,15 +180,15 @@
                     chukuleibie:''
                 },
                 outResult:[{/* 出库业务 —— 信息结果表格 */
-                    huopinbianhao:'',
-                    huopinmingcheng:'',
+                    localId:'',
+                    goodsName:'',
                     danwei:'',
-                    chukushuliang:'',
-                    chukushijian:'',
+                    amount:'',
+                    registerTime:'',
                     quxiang:'',
-                    zerenren:'',
-                    lianxidianhua:'',
-                    beizhu:''
+                    charity:'',
+                    phone:'',
+                    remark:''
                 }],
                 fileList: [{/* 出库业务 —— 出库单上传 */
                     name: '默认文件',
@@ -180,7 +198,30 @@
 
             }
         },
+        mounted(){
+            getData(this);
+        },
         methods: {
+            search(){
+                while (app.queryResult[0] !== undefined) {
+                    app.queryResult.pop();
+                }
+                var toPost = {};
+                toPost['method'] = '出库';
+                for (var key in app.queryCondition) {
+                    if (app.queryCondition[key]) {
+                        toPost[key] = app.queryCondition[key];
+                    }
+                }
+                post('/depot/query_schedule', toPost, (data, err) => {
+                    if (err) {
+                        return;
+                    }
+                    for (var item of data) {
+                        app.queryResult.push(item);
+                    }
+                })
+            },
             /*出库单上传相关函数 begin*/
             handleRemove(file, fileList) {
                 console.log(file, fileList);
