--- a/BR-MS/StorageLookup.html
+++ b/BR-MS/StorageLookup.html
@@ -5,14 +5,85 @@
     <title>库存盘点</title>
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
-        [v-cloak] {
-            visibility: hidden;
-        }
     </style>
 </head>
 <body>
-<div id="app" v-cloak>
-    <el-button @click="test">测试</el-button>
+<div id="app">
+    <el-card>
+        <el-form :model="inSelection">
+            <el-form :inline="true">
+                <el-form-item label="入库类别：" size="mini"><el-input></el-input></el-form-item>
+            </el-form>
+            <el-form :inline="true">
+                <el-form-item label="货品编号：" size="mini"><el-input></el-input></el-form-item>
+                <el-form-item label="责任人：" size="mini"><el-input></el-input></el-form-item>
+            </el-form>
+            <el-form :inline="true">
+                <el-form-item label="仓库：" size="mini"><span>XXXX</span></el-form-item>
+                <el-form-item label="入库时间范围：" size="mini">
+                    <el-date-picker v-model="timeSelect" type="daterange" range-separator="至" start-placeholder="开始日期" end-placeholder="结束日期">{{timeSelect}}</el-date-picker>
+                </el-form-item>
+                <el-form-item size="mini">
+                    <el-button style="background-color: #ececec">查询</el-button>
+                </el-form-item>
+            </el-form>
+        </el-form>
+    </el-card>
+    <el-table :data="queryResult" size="mini" max-height="250" :default-sort="{prop: 'rukushijian', order: 'descending'}">
+        <el-table-column type="expand"><!--折叠部分项-->
+            <template slot-scope="props">
+                <el-form label-position="right" class="demo-table-expand">
+                    <el-form :inline="true">
+                        <el-form-item label="货品名称：" size="mini">
+                            <span>{{ props.row.name }}</span>
+                        </el-form-item>
+                        <el-form-item label="货品编号：" size="mini">
+                            <span>{{ props.row.shop }}</span>
+                        </el-form-item>
+                    </el-form>
+                    <el-form :inline="true">
+                        <el-form-item label="单位：" size="mini">
+                            <span>{{ props.row.shopId }}</span>
+                        </el-form-item>
+                        <el-form-item label="数量：" size="mini">
+                            <span>{{ props.row.category }}</span>
+                        </el-form-item>
+                    </el-form>
+                    <el-form :inline="true">
+                        <el-form-item label="责任人：" size="mini">
+                            <span>{{ props.row.desc }}</span>
+                        </el-form-item>
+                        <el-form-item label="存放库位：" size="mini">
+                            <span>{{ props.row.address }}</span>
+                        </el-form-item>
+                    </el-form>
+                </el-form>
+            </template>
+        </el-table-column>
+        <el-table-column type="index" width="50" label="序号"></el-table-column>
+        <el-table-column prop="huopinmingcheng" label="货品名称" width="100"></el-table-column>
+        <el-table-column prop="huopinbianhao" label="货品编号" width="100"></el-table-column>
+        <el-table-column prop="xiangxixinxi" label="货品信息" width="80">
+            <!--点击查看当前物资详细信息-->
+            <template slot-scope="scope">
+                <el-button size="mini" style="background-color: #ececec" @click="dialogVisible=true">查看
+                </el-button>
+                <el-dialog title="货品详细信息" :visible.sync="dialogVisible" width="50%" :before-close="handleClose">
+                    <span>这里应该是所选货品的详细信息</span>
+                    <span slot="footer" class="dialog-footer">
+                        <el-button @click="dialogVisible = false" size="mini" style="background-color: #ececec">关闭</el-button>
+                    </span>
+                </el-dialog>
+            </template>
+        </el-table-column>
+        <el-table-column prop="rukushijian" label="入库时间"width="100"></el-table-column>
+        <el-table-column prop="beizhu" label="备注"width="250"></el-table-column>
+    </el-table>
+    <el-form>
+        <el-form-item size="mini">
+            <el-button style="background-color: #ececec">生成货品清单</el-button>
+        </el-form-item>
+    </el-form>
 </div>
 </body>
 <script src="lib/vue.js"></script>
@@ -24,11 +95,20 @@
 
     var app = new Vue({
         el: '#app',
-        data: {
-            results: [],
-            userInfo: []
+        data: function(){
+            return{
+                timeSelect:'',/*时间选择器*/
+                dialogVisible: false, /*查看当前货品详细信息 查看 button*/
+
+                inSelection:{/*入库筛选框*/
+                },
+                queryResult:[{/*入库历史查询结果*/
+                }]
+            }
         },
-        methods: {},
+        methods: {
+
+        },
     });
 </script>
 </html>
