--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
         body {
-            background: url(res/bg-air.jpg) center top;
+            background: url(res/login-bg.jpg);
+            background-attachment: fixed;
             background-size: 100%;
             margin: 0;
         }
@@ -66,24 +67,38 @@
         [v-cloak]{
             display: none;
         }
+
+        #header{
+            z-index: 9999;
+            position:fixed;
+            left:0;
+            top:0;
+            width:100%;
+            height:85px;
+            background:#066efd;
+        }
+
+        #sign-card{
+            margin-top: 30px;
+        }
+
     </style>
 </head>
 <body>
 <div id="app" v-cloak>
+    <div id="header">
+        <div style="padding:20px 25px;height:50px;">
+            <img src="res/text.png" style="height:90%;"/>
+        </div>
+    </div>
     <el-container>
-        <el-header class="header">
-            <div id="header-bg">
-                <div id="logo-text">
-                    <img src="res/icon-box.png">
-                    <span>后勤物资多维度调配系统</span>
-                </div>
-            </div>
+        <el-header>
         </el-header>
         <el-main>
             <el-row v-loading.fullscreen.lock="loading" element-loading-text="正在提交"
                     element-loading-background="rgba(0,0,0,0.7)">
                 <el-col :span="14" :offset="5">
-                    <el-card>
+                    <el-card id="sign-card">
                         <transition name="el-fade-in">
                             <div v-show="state===0">
                                 <h2>用户注册</h2>
